<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="details.ui.PostReporFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/report_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="30dp"
            android:text="@string/what_problem_in_this_post"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/post_problem_describition_editText"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edit_text_style"
            android:gravity="start"
            android:hint="@string/eecribe_with_sumrization"
            android:paddingStart="5dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textDirection="rtl"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/report_text" />

        <Button
            android:id="@+id/send_report_btn"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/radious_button_style"
            android:text="@string/send_report"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.723"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thanks_fro_report_text"
            app:layout_constraintVertical_bias="0.48" />

        <TextView
            android:id="@+id/thanks_fro_report_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:textColor="#0E1BFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/send_report_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_problem_describition_editText" />

        <ProgressBar
            android:id="@+id/progressBar_report"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/send_report_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/report_text"
            app:layout_constraintVertical_bias="0.758" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>