<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".user.userediting.ui.EditBasicUserProfileInfoFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".add_lost.ui.AddLostFragment">

                <ImageView
                    android:id="@+id/cancel_change_pass_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back_ic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.085"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    app:layout_constraintVertical_bias="0.219" />

                <RelativeLayout
                    android:id="@+id/relativeLayout9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="70dp">

                    <LinearLayout
                        android:id="@+id/name_layour_linear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/userName_tittle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_marginEnd="30dp"
                            android:text="@string/username"/>

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userName_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginEnd="40dp"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:textSize="13sp"
                            android:textStyle="bold" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/place_of_stolen_layout_linear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/name_layour_linear"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/userPhone_tittle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_marginEnd="30dp"
                            android:text="@string/UserPhone" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userPhone_editText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginEnd="40dp"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:textSize="13sp"
                            android:textStyle="bold" />
                    </LinearLayout>


                    <RelativeLayout
                        android:id="@+id/horxintal_layouts_relative"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/place_of_stolen_layout_linear"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp">
                    </RelativeLayout>


                    <LinearLayout
                        android:id="@+id/date_of_stolen_layout_linear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/horxintal_layouts_relative"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/user_addrees_tittle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_marginEnd="30dp"
                            android:text="@string/Useraddress" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/user_addrees_editText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginEnd="40dp"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:textSize="13sp"
                            android:textStyle="bold" />
                    </LinearLayout>








                    <LinearLayout
                        android:id="@+id/user_email_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/date_of_stolen_layout_linear"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/user_email_tittle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_marginEnd="30dp"
                            android:text="@string/Useremail" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/user_email_editText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginEnd="40dp"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:textSize="13sp"
                            android:textStyle="bold" />
                    </LinearLayout>





                    <LinearLayout
                        android:id="@+id/user_pass_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/user_email_layout"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/user_pass_tittle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_marginEnd="30dp"
                            android:text="@string/userPass" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/user_pass_editText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginEnd="40dp"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:textSize="13sp"
                            android:textStyle="bold" />
                    </LinearLayout>




                    <LinearLayout
                        android:id="@+id/security_question_linear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/user_pass_layout"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/user_security_question_tittle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_marginEnd="30dp"
                            android:text="@string/security_question" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/user_security_question_ediText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginEnd="40dp"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:textSize="13sp"
                            android:textStyle="bold" />


                        <Button
                            android:id="@+id/update_user_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="50dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginEnd="50dp"
                            android:background="@drawable/radious_button_style"
                            android:layout_marginBottom="20dp"
                            android:text="@string/update_post_button" />


                    </LinearLayout>

                </RelativeLayout>


                <ProgressBar
                    android:id="@+id/update_userin_progressbar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>