<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".user.login.ui.UserChangingPasswordFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">


      <ImageView
          android:id="@+id/cancel_change_pass_ic"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/cancel_ic"
          app:layout_constraintBottom_toTopOf="@+id/security_quest"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.085"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.219" />

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/security_quest"
          android:layout_width="310dp"
          android:layout_height="50dp"
          android:layout_marginStart="40dp"
          android:layout_marginTop="156dp"
          android:layout_marginEnd="40dp"
          android:background="@drawable/edit_text_loginstyle"
          android:hint="@string/security_question"
          android:paddingStart="5dp"
          android:paddingEnd="60dp"
          android:textColorHint="@color/black"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />


      <ImageView
          android:id="@+id/correct_security_code_ic"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="16dp"
          android:src="@drawable/right_ic"
          app:layout_constraintBottom_toBottomOf="@+id/security_quest"
          app:layout_constraintEnd_toEndOf="@+id/security_quest"
          app:layout_constraintHorizontal_bias="0.951"
          app:layout_constraintStart_toStartOf="@+id/security_quest" />

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/new_userpass"
          android:layout_width="310dp"
          android:layout_height="50dp"
          android:layout_marginStart="40dp"
          android:layout_marginTop="48dp"
          android:layout_marginEnd="40dp"
          android:background="@drawable/edit_text_loginstyle"
          android:textColorHint="@color/black"
          android:hint="@string/new_userPass"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/security_quest" />


      <Button
          android:id="@+id/change_pass_button"
          android:layout_width="162dp"
          android:layout_height="50dp"
          android:layout_gravity="center"
          android:layout_marginTop="80dp"
          android:background="@drawable/radious_button_style"
          android:text="@string/cahnge_pass"
          android:textColor="@color/white"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.546"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/new_userpass" />

      <TextView
          android:id="@+id/text3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="60dp"
          android:text="هل تذكرت كلمة المرور ؟ "
          android:textSize="16sp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/change_pass_button"
          app:layout_constraintVertical_bias="0.765" />

      <TextView
          android:id="@+id/update_pss_login_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="20dp"
          android:text="تسجيل الدخول"
          android:textColor="#FF008D"
          android:textSize="16sp"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@+id/text3"
          app:layout_constraintTop_toBottomOf="@+id/change_pass_button"
          app:layout_constraintVertical_bias="0.765" />




      <ProgressBar
          android:id="@+id/cahnge_pass_progress"
          android:layout_width="35dp"
          android:layout_height="35dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />


  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>