<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="5dp"
    android:background="@color/white">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_of_post_recycler_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_launcher_background"
                app:civ_border_color="#FFFFFF"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.949"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/name_of_post_recycler_text_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="اسم الطفل المختفي"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/image_of_post_recycler_profile"
                app:layout_constraintHorizontal_bias="0.845"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.284" />

            <TextView
                android:id="@+id/place_of_stolen_hidden_recycler_text_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="40dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/image_of_post_recycler_profile"
                app:layout_constraintHorizontal_bias="0.845"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_of_children_recycler_text"
                app:layout_constraintVertical_bias="0.112" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/edit_post_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/constraint_layout"
            android:background="@drawable/text_backround_style"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/edit_post_text_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_post_text"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:textColor="#093070"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_post_layout"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/founded_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/are_u_fount_this_lost"
                android:layout_marginEnd="20dp"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:id="@+id/delete_item_text_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delte_item_text"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:textColor="#1642E3"
                android:textStyle="bold"
                android:layout_toStartOf="@id/founded_question"/>

        </RelativeLayout>

    </RelativeLayout>



</androidx.cardview.widget.CardView>
